Fix spacing issues for larger screens
- Added additional white space between the nav bar and the main content for all media queries.

--- a/styles/global.css
+++ b/styles/global.css
@@ -89,7 +89,7 @@ nav {
 
 nav ul {
     list-style-type: none;
-    gap: 2.5em;
+    gap: 2em;
 }
 
 nav li {
@@ -185,6 +185,10 @@ footer {
         padding: 0.5em 1.75em;
     }
 
+    main {
+        margin-top: 3em;
+    }
+
     section.hero,
     section.blog {
         padding: 1.75em;
@@ -207,7 +211,8 @@ footer {
 
     main {
         max-width: 1080px;
-        margin: 0 auto;
+        margin-block: 4em;
+        margin-inline: auto;
     }
 
     section.hero,
